tests/paczka1/small_fuzzy/52779674.err
Error in line 3: 3YpCw S826 35,3
Error in line 9: CDTbJrD6x S584 85,1
Error in line 10: CDTbJrD6x S793 47,0
